@@ -166,13 +166,13 @@ proto_cmds = {
     'HELP' : dict(perm=None, auth=False, arg=None,  help='Syntax: HELP [<SP> cmd] (show help).'),
     'LIST' : dict(perm='l',  auth=True,  arg=None,  help='Syntax: LIST [<SP> path-name] (list files).'),
     'MDTM' : dict(perm='l',  auth=True,  arg=True,  help='Syntax: MDTM [<SP> file-name] (get last modification time).'),
-    'MLSD' : dict(perm='l',  auth=True,  arg=None,  help='Syntax: MLSD [<SP> dir-name] (list files in a machine-processable form)'),
-    'MLST' : dict(perm='l',  auth=True,  arg=None,  help='Syntax: MLST [<SP> path-name] (show a path in a machine-processable form)'),
+    'MLSD' : dict(perm='l',  auth=True,  arg=None,  help='Syntax: MLSD [<SP> dir-name] (list files in a machine-processable form).'),
+    'MLST' : dict(perm='l',  auth=True,  arg=None,  help='Syntax: MLST [<SP> path-name] (show a path in a machine-processable form).'),
     'MODE' : dict(perm=None, auth=True,  arg=True,  help='Syntax: MODE <SP> mode (noop; set data transfer mode).'),
-    'MKD'  : dict(perm='m',  auth=True,  arg=True,  help='Syntax: MDK <SP> dir-name (create directory).'),
+    'MKD'  : dict(perm='m',  auth=True,  arg=True,  help='Syntax: MKD <SP> dir-name (create directory).'),
     'NLST' : dict(perm='l',  auth=True,  arg=None,  help='Syntax: NLST [<SP> path-name] (list files in a compact form).'),
     'NOOP' : dict(perm=None, auth=False, arg=False, help='Syntax: NOOP (just do nothing).'),
-    'OPTS' : dict(perm=None, auth=True,  arg=True,  help='Syntax: OPTS <SP> ftp-command [<SP> option] (specify options for FTP commands)'),
+    'OPTS' : dict(perm=None, auth=True,  arg=True,  help='Syntax: OPTS <SP> ftp-command [<SP> option] (specify options for FTP commands).'),
     'PASS' : dict(perm=None, auth=False, arg=True,  help='Syntax: PASS <SP> user-name (set user password).'),
     'PASV' : dict(perm=None, auth=True,  arg=False, help='Syntax: PASV (set server in passive mode).'),
     'PORT' : dict(perm=None, auth=True,  arg=True,  help='Syntax: PORT <sp> h1,h2,h3,h4,p1,p2 (set server in active mode).'),
@@ -186,7 +186,7 @@ proto_cmds = {
     'RNTO' : dict(perm='f',  auth=True,  arg=True,  help='Syntax: RNTO <SP> file-name (file renaming (destination name)).'),
     'SITE' : dict(perm=None, auth=False, arg=True,  help='Syntax: SITE <SP> site-command (execute the specified SITE command).'),
     'SITE HELP' : dict(perm=None, auth=False, arg=None, help='Syntax: SITE HELP [<SP> site-command] (show SITE command help).'),
-    'SIZE' : dict(perm='l',  auth=True,  arg=True,  help='Syntax: HELP <SP> file-name (get file size).'),
+    'SIZE' : dict(perm='l',  auth=True,  arg=True,  help='Syntax: SIZE <SP> file-name (get file size).'),
     'STAT' : dict(perm='l',  auth=False, arg=None,  help='Syntax: STAT [<SP> path name] (status information [list files]).'),
     'STOR' : dict(perm='w',  auth=True,  arg=True,  help='Syntax: STOR <SP> file-name (store a file).'),
     'STOU' : dict(perm='w',  auth=True,  arg=None,  help='Syntax: STOU [<SP> file-name] (store a file with a unique name).'),
@@ -196,7 +196,7 @@ proto_cmds = {
     'USER' : dict(perm=None, auth=False, arg=True,  help='Syntax: USER <SP> user-name (set username).'),
     'XCUP' : dict(perm='e',  auth=True,  arg=False, help='Syntax: XCUP (obsolete; go to parent directory).'),
     'XCWD' : dict(perm='e',  auth=True,  arg=None,  help='Syntax: XCWD [<SP> dir-name] (obsolete; change current directory).'),
-    'XMKD' : dict(perm='m',  auth=True,  arg=True,  help='Syntax: XMDK <SP> dir-name (obsolete; create directory).'),
+    'XMKD' : dict(perm='m',  auth=True,  arg=True,  help='Syntax: XMKD <SP> dir-name (obsolete; create directory).'),
     'XPWD' : dict(perm=None, auth=True,  arg=False, help='Syntax: XPWD (obsolete; get current dir).'),
     'XRMD' : dict(perm='d',  auth=True,  arg=True,  help='Syntax: XRMD <SP> dir-name (obsolete; remove directory).'),
     }
